--- a/docs/17. 配置 rollup.md
+++ b/docs/17. 配置 rollup.md
@@ -29,18 +29,18 @@ export default {
   output: [
     {
       format: 'cjs',
-      file: './lib/mini-vue.cjs.js',
+      file: './lib/my-mini-vue.cjs.js',
     },
     {
       format: 'esm',
-      file: './lib/mini-vue.esm.js',
+      file: './lib/my-mini-vue.esm.js',
     },
   ],
   plugins: [typescript()],
 }
 ```
 
-`src` 创建 `index.ts` 作为整个 mini-vue 库的出口文件
+`src` 创建 `index.ts` 作为整个 my-mini-vue 库的出口文件
 
 配置完成之后我们就可以试一下打包了，可以配置一个 npm script `"build": "rollup -c rollup.config.js"`，这里打包的时候可能会有一个 warning，让你把你的 tsconfig.json 中的 `module` 改为 `esnext`
 
