--- a/docs/21. 实现组件的 props 功能.md
+++ b/docs/21. 实现组件的 props 功能.md
@@ -6,7 +6,7 @@
 
 ```ts
 // Foo.js
-import { h } from '../../lib/mini-vue.esm.js'
+import { h } from '../../lib/my-mini-vue.esm.js'
 
 export const Foo = {
   setup(props) {},
@@ -73,7 +73,7 @@ render() {
 首先，一个组件的 setup 可以传入一个参数，该参数就是 props
 
 ```ts
-import { h } from '../../lib/mini-vue.esm.js'
+import { h } from '../../lib/my-mini-vue.esm.js'
 
 export const Foo = {
   // setup 第一个参数是 props
@@ -141,7 +141,7 @@ function setupStatefulComponent(instance) {
 ## 3. props 挂载到 this 中
 
 ```ts
-import { h } from '../../lib/mini-vue.esm.js'
+import { h } from '../../lib/my-mini-vue.esm.js'
 
 export const Foo = {
   setup(props) {
@@ -236,7 +236,7 @@ function setupStatefulComponent(instance) {
 我们测试一下
 
 ```ts
-import { h } from '../../lib/mini-vue.esm.js'
+import { h } from '../../lib/my-mini-vue.esm.js'
 
 export const Foo = {
   setup(props) {
