--- a/docs/23. 实现组件的 slot 功能.md
+++ b/docs/23. 实现组件的 slot 功能.md
@@ -7,7 +7,7 @@
 我们先看看最简单的 h 函数中的 slot 是什么样子的
 
 ```ts
-import { h } from '../../lib/mini-vue.esm.js'
+import { h } from '../../lib/my-mini-vue.esm.js'
 import { Foo } from './Foo.js'
 
 export default {
@@ -20,7 +20,7 @@ export default {
 ```
 
 ```ts
-import { h } from '../../lib/mini-vue.esm.js'
+import { h } from '../../lib/my-mini-vue.esm.js'
 
 export const Foo = {
   setup() {},
