--- a/docs/26. 实现 provide 和 inject.md
+++ b/docs/26. 实现 provide 和 inject.md
@@ -7,7 +7,7 @@
 我们先看看 provide 和 inject 的一个例子
 
 ```ts
-import { createApp, h, provide, inject } from '../../lib/mini-vue.esm.js'
+import { createApp, h, provide, inject } from '../../lib/my-mini-vue.esm.js'
 
 const Provider = {
   render() {
@@ -115,7 +115,7 @@ function setupRenderEffect(instance, vnode, container) {
 ### 3.1 例子
 
 ```ts
-import { createApp, h, provide, inject } from '../../lib/mini-vue.esm.js'
+import { createApp, h, provide, inject } from '../../lib/my-mini-vue.esm.js'
 
 const Provider = {
   render() {
