--- a/docs/42. transform 模块.md
+++ b/docs/42. transform 模块.md
@@ -8,7 +8,7 @@
 test('should change text content', () => {
   const ast = baseParse('<div>hi</div>')
   transform(ast)
-  expect(ast.children[0].children[0].content).toEqual('hi mini-vue')
+  expect(ast.children[0].children[0].content).toEqual('hi my-mini-vue')
 })
 ```
 
@@ -34,7 +34,7 @@ function traverseNode(node) {
 }
 ```
 
-但是我们发现，其实将 content 的值追加 mini-vue 这类的需求，其实是非常特定的场景下的，但是我们设计程序是肯定要通用性最佳的，不可能要将特定的处理写在程序中。
+但是我们发现，其实将 content 的值追加 my-mini-vue 这类的需求，其实是非常特定的场景下的，但是我们设计程序是肯定要通用性最佳的，不可能要将特定的处理写在程序中。
 
 所以我们就可以换一种思路，通过外部提供处理程序，内部再调用外部传入的处理程序。我们称之为插件（plugin）。
 
@@ -45,14 +45,14 @@ test('should change text content', () => {
   // 外部提供处理
    const transformText = node => {
      if (node.type === NodeType.TEXT) {
-       node.content += ' mini-vue'
+       node.content += ' my-mini-vue'
      }
    }
   // 通过 options 传入内部，内部再调用
   transform(ast, {
     nodeTransforms: [transformText],
   })
-  expect(ast.children[0].children[0].content).toEqual('hi mini-vue')
+  expect(ast.children[0].children[0].content).toEqual('hi my-mini-vue')
 })
 ```
 
