--- a/docs/47. 实现 template 编译为 render.md
+++ b/docs/47. 实现 template 编译为 render.md
@@ -4,7 +4,7 @@
 
 ## 1. 例子
 
-[查看例子](https://github.com/TTiip/mini-vue/tree/main/example/compileBase)
+[查看例子](https://github.com/TTiip/my-mini-vue/tree/main/example/compileBase)
 
 ## 2. 实现
 
@@ -51,7 +51,7 @@ Vue 的贡献者文档里给出这么一个解决方案：
 
 > 如果你实在想在 runtime 中使用 compiler 的代码，或者反之，你需要将其代码提取到 `@vue/shared` 中
 
-那么在 mini-vue 中，我们就不用提取到 `@vue/shared` 了，我们可以直接在所有模块的最外层进行使用。
+那么在 my-mini-vue 中，我们就不用提取到 `@vue/shared` 了，我们可以直接在所有模块的最外层进行使用。
 
 ```ts
 // src/index.ts
