--- a/docs/27. 实现 customRenderer.md
+++ b/docs/27. 实现 customRenderer.md
@@ -4,7 +4,7 @@
 
 ## 1. 目前渲染存在的问题
 
-我们来看看目前我们自己的 mini-vue 渲染存在的问题，切换到 `render.ts`
+我们来看看目前我们自己的 my-mini-vue 渲染存在的问题，切换到 `render.ts`
 
 ```ts
 function mountElement(vnode, container, parentInstance) {
@@ -169,8 +169,8 @@ export const createApp = (...args) => {
 
 我们的层级就从原来的：
 
-- mini-vue 入口  ---->  `runtime-core`
-- mini-vue 入口  ---->  `runtime-dom`  ---->  `runtime-core`
+- my-mini-vue 入口  ---->  `runtime-core`
+- my-mini-vue 入口  ---->  `runtime-dom`  ---->  `runtime-core`
 
 最后，我们再来试试之前写的 hello_world 能不能跑通吧！
 
@@ -178,5 +178,5 @@ export const createApp = (...args) => {
 
 然后我们根据写好的 renderer 来写一个在 canvas 平台运行的例子吧！
 
-[例子](https://github.com/TTiip/mini-vue/tree/main/example/customRenderer)
+[例子](https://github.com/TTiip/my-mini-vue/tree/main/example/customRenderer)
 
