--- a/docs/31. 更新 children（二）.md
+++ b/docs/31. 更新 children（二）.md
@@ -358,4 +358,4 @@ const nextChildren = [h('p', { key: 'B' }, 'B'), h('p', { key: 'C' }, 'C')]
 i > e2
 ```
 
-这个时候我们发现和头部的判断是一样的，就可以复用头部的逻辑了
+这个时候我们发现和头部的判断是一样的，就可以复用尾部的逻辑了
